<resources>
    <string name="app_name">Bartsy Beta</string>
    <string name="app_version">8.28.2013</string>
    <string name="fb_app_id">451948571568667</string>
    <string name="confirm_agreements">Please confirm that you have read and understand the following agreements</string>
    <string name="beta_participant_agreement">Beta Participant Agreement</string>
    <string name="end_user_agreement">End User Licence Agreement</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_agreement">By checking this box I verify that I have read and agree to be bound by the above agreements.</string>
    <string name="config_shared_preferences_name">bartsy_preferences</string>
    <string name="config_user_login">bartsyUserLogin</string>
    <string name="config_user_password">bartsyUserPassword</string>
    <string name="config_user_bartsyId">bartsyUserId</string>
    <string name="config_facebook_username">facebookUsername</string>
    <string name="config_facebook_id">facebookId</string>
    <string name="config_google_username">googleUsername</string>
    <string name="config_google_id">googleId</string>
    <string name="config_user_nickname">user_name</string>
    <string name="config_user_image_path">user_description</string>
    <string name="config_user_profile_picture">user_profile_picture</string>
    <string name="config_venue_channel_name">Venue</string>
    <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
    <string name="UserProfileActivity_input_status">UserProfileActivity_input_status</string>
    <string name="ItemOptionsActivity_input_status">ItemOptionsActivity_input_status</string>
    <string name="prefs_venue">prefs_venue</string>
    <string name="prefs_facebook_friends">prefs_facebook_friends</string>
    <string name="action_status">Status:</string>
    <string name="action_venue">Searching...</string>
    <string name="action_settings">Settings</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="action_quit">Quit</string>
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="title_people">People</string>
    <string name="title_menu">Menu</string>
    <string name="title_orders">Orders</string>
    <string name="title_past_orders">Past orders</string>
    <string name="finding_service">Finding local services</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type Message</string>
    <string name="wifidirect_port">Type Message</string>
    <string name="get_contacts">Get Contacts List</string>
    <string name="update_contacts">Update Contacts List</string>
    <string name="label_name">Name</string>
    <string name="label_phone_numbers">Phone Number(s)</string>
    <string name="label_email_addresses">Email Address(es)</string>
    <string name="contact_name">unknown</string>
    <string name="contact_phone_number">unknown</string>
    <string name="contact_email">unknow</string>
    <string name="contact_dialog_title">Contact Details:</string>
    <string-array name="phone_types">
        <item>Custom</item>
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Fax Work</item>
        <item>Fax Home</item>
        <item>Pager</item>
        <item>Other</item>
        <item>CallBack</item>
        <item>Car</item>
        <item>Company Main</item>
        <item>ISDN</item>
        <item>Main</item>
        <item>Other Fax</item>
        <item>Radio</item>
        <item>Telex</item>
        <item>TTY/TTD</item>
        <item>Work Mobile</item>
        <item>Work Pager</item>
        <item>Assistant</item>
        <item>MMS</item>
    </string-array>
    <string-array name="email_types">
        <item>Custom</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Mobile</item>
    </string-array>
    <string name="hello">This is a AllJoyn service that provides access to this devices contact information for an AllJoyn Client.</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">EI&amp;E: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="customDrinkLabel">Custom Drinks</string>
</resources>