<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:divider="?android:dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="end" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_agreements"
        android:textColor="#cccccc" />
    <Button
        android:id="@+id/betaAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/beta_participant_agreement" />
    <Button
        android:id="@+id/endUserAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/end_user_agreement" />
    <Button
        android:id="@+id/termsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/terms_of_use" />
    <Button
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/privacy_policy" />
    
    <CheckBox android:id="@+id/checkAgreement" 
        android:text="@string/check_agreement" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">
	    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Quit" />
    	<Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Accept" />
	</LinearLayout>

</LinearLayout>